--- a/nuxeo-user-profile/pom.xml
+++ b/nuxeo-user-profile/pom.xml
@@ -46,6 +46,17 @@
       <artifactId>nuxeo-platform-test</artifactId>
       <scope>test</scope>
     </dependency>
+    <dependency>
+      <groupId>org.nuxeo.ecm.platform</groupId>
+      <artifactId>nuxeo-platform-imaging-core</artifactId>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.nuxeo.ecm.platform</groupId>
+      <artifactId>nuxeo-platform-commandline-executor</artifactId>
+      <scope>test</scope>
+    </dependency>
+
   </dependencies>
 
 </project>
