--- a/nuxeo-webengine-core/pom.xml
+++ b/nuxeo-webengine-core/pom.xml
@@ -6,7 +6,7 @@
   <parent>
     <groupId>org.nuxeo.ecm.webengine</groupId>
     <artifactId>nuxeo-webengine-parent</artifactId>
-    <version>5.4.2.1-SNAPSHOT</version>
+    <version>5.4.2-HF03</version>
   </parent>
 
   <artifactId>nuxeo-webengine-core</artifactId>
