NXP-7259 Add database transaction timeout variable to nuxeo.conf (tomcat only)

--- a/nuxeo-distribution-resources/src/main/resources/bin/nuxeo.conf
+++ b/nuxeo-distribution-resources/src/main/resources/bin/nuxeo.conf
@@ -48,6 +48,9 @@ nuxeo.force.generation=true
 #nuxeo.vcs.min-pool-size=
 #nuxeo.vcs.max-pool-size=
 
+# Database transaction timeout in seconds (tomcat only)
+#nuxeo.db.transactiontimeout=300
+
 # Mail settings (for notifications)
 #nuxeo.notification.eMailSubjectPrefix="[Nuxeo]"
 #mail.smtp.host=
