--- a/nuxeo-core-persistence/pom.xml
+++ b/nuxeo-core-persistence/pom.xml
@@ -6,7 +6,7 @@
   <parent>
     <groupId>org.nuxeo.ecm.core</groupId>
     <artifactId>nuxeo-core-parent</artifactId>
-    <version>5.4.1.1-SNAPSHOT</version>
+    <version>5.4.1-HF07</version>
     <relativePath>../pom.xml</relativePath>
   </parent>
 
