--- a/nuxeo-distribution-resources/src/main/resources/templates-tomcat/default/webapps/ROOT/WEB-INF/web.xml
+++ b/nuxeo-distribution-resources/src/main/resources/templates-tomcat/default/webapps/ROOT/WEB-INF/web.xml
@@ -26,22 +26,22 @@
      Welcome to Tomcat
   </description>
 
-
-
-   <!--Adding WSS Filter declaration and mapping
-   <filter>
-       <display-name>WSS ROOT Filter</display-name>
-       <filter-name>WSSROOTFilter</filter-name>
-       <filter-class>org.nuxeo.wss.servlet.WSSFilter</filter-class>
-       <init-param>
-          <param-name>org.nuxeo.wss.rootFilter</param-name>
-          <param-value>/nuxeo</param-value>
-       </init-param>
-   </filter>
-   <filter-mapping>
-       <filter-name>WSSROOTFilter</filter-name>
-       <url-pattern>/*</url-pattern>
-   </filter-mapping>
-   -->
+     <!--Adding WSS Filter declaration and mapping -->
+     <filter>
+      <filter-name>WSSFilter</filter-name>
+      <filter-class>org.nuxeo.wss.servlet.WSSFrontFilter</filter-class>
+      <init-param>
+         <param-name>org.nuxeo.wss.rootFilter</param-name>
+         <param-value>/nuxeo</param-value>
+      </init-param>
+    </filter>
+    <filter-mapping>
+        <filter-name>WSSFilter</filter-name>
+        <url-pattern>/*</url-pattern>
+    </filter-mapping>
+    <filter-mapping>
+        <filter-name>WSSFilter</filter-name>
+        <url-pattern>/</url-pattern>
+    </filter-mapping>
 
 </web-app>
