--- a/nuxeo-distribution-gf3/pom.xml
+++ b/nuxeo-distribution-gf3/pom.xml
@@ -5,7 +5,7 @@
   <parent>
     <groupId>org.nuxeo.ecm.platform</groupId>
     <artifactId>nuxeo-features-parent</artifactId>
-    <version>5.4.2.1-SNAPSHOT</version>
+    <version>5.4.2-HF04</version>
   </parent>
 
   <groupId>org.nuxeo.ecm.distribution</groupId>
@@ -30,7 +30,7 @@
   </profiles>
   
   <properties>
-    <nuxeo.core.version>5.4.2.1-SNAPSHOT</nuxeo.core.version>
+    <nuxeo.core.version>5.4.2-HF04</nuxeo.core.version>
     <gf3.version>3.0-b38</gf3.version>
     <application.name>${project.artifactId}-${project.version}</application.name>
   </properties>
