--- a/nuxeo-platform-login-deputy/pom.xml
+++ b/nuxeo-platform-login-deputy/pom.xml
@@ -10,7 +10,7 @@
   <parent>
     <groupId>org.nuxeo.ecm.platform</groupId>
     <artifactId>nuxeo-platform-login-parent</artifactId>
-    <version>5.4.2.1-SNAPSHOT</version>
+    <version>5.4.2-HF04</version>
   </parent>
 
   <dependencies>
