add nuxeo-activity to addons list

--- a/pom.xml
+++ b/pom.xml
@@ -48,6 +48,7 @@
     <module>nuxeo-platform-rendition</module>
     <module>nuxeo-platform-replication</module>
     <module>nuxeo-apidoc-server</module>
+    <module>nuxeo-activity</module>
   </modules>
 
   <repositories>
