--- a/nuxeo-platform-document-routing-core/pom.xml
+++ b/nuxeo-platform-document-routing-core/pom.xml
@@ -28,6 +28,10 @@
     </dependency>
     <dependency>
       <groupId>org.nuxeo.ecm.platform</groupId>
+      <artifactId>nuxeo-platform-comment-api</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>org.nuxeo.ecm.platform</groupId>
       <artifactId>nuxeo-platform-userworkspace-core</artifactId>
       <scope>test</scope>
     </dependency>
