--- a/nuxeo-platform-webapp-core/src/main/resources/themes/palettes/galaxy-colors.properties
+++ b/nuxeo-platform-webapp-core/src/main/resources/themes/palettes/galaxy-colors.properties
@@ -8,6 +8,9 @@ header.mainTabsSelected=#000000
 breadcrumblink=#666666
 titles=#5c5c5c
 summary.titles=#848484
+summary.surveyproject=#0088c0
+summary.surveyopen=#42a600
+summary.surveyclosed=#5d5d5d
 foldablebox.titles=#333333
 foldablebox.titlesDisabled=#555555
 foldablebox.actions=#333333
