--- a/nuxeo-platform-login-deputy/pom.xml
+++ b/nuxeo-platform-login-deputy/pom.xml
@@ -80,6 +80,12 @@
       <artifactId>hibernate-core</artifactId>
       <scope>test</scope>
     </dependency>
+    <dependency>
+      <groupId>javax.faces</groupId>
+      <artifactId>jsf-api</artifactId>
+    </dependency>
+
+
 
   </dependencies>
 
