--- a/nuxeo-platform-mail/nuxeo-platform-mail-test/src/test/resources/mail.conf
+++ b/nuxeo-platform-mail/nuxeo-platform-mail-test/src/test/resources/mail.conf
@@ -38,7 +38,7 @@ smtpdelivery.threshold=10
 
 # This property defines the domains that are considered 'local'.  In order
 # to receive email for local users, their domain must be defined here.
-# multiple domains can be added as a comma seperated list.
+# multiple domains can be added as a comma separated list.
 # ex: domains=mydomain1.com,mydomain2.com
 domains=localhost
 
@@ -47,13 +47,13 @@ domains=localhost
 # To enable this feature, uncomment this property and set it to a valid username.
 #defaultuser=admin@mydomain.com
 
-# It may be neccessary to configure your SMTP server to deliver all outgoing
+# It may be necessary to configure your SMTP server to deliver all outgoing
 # mail through a gateway SMTP server.  This may be the case if your ISP blocks outgoing
 # SMTP connections.  This setting allows you to define a single SMTP server that your server
 # will send all remote mail to.
 # Optional: add ":PortNumber" after the SMTP server to specify the port number. ex : smtp.myisp.com:25
 # Optional: add "/user:password" to specify a username and password to the default SMTP server.
-# More than one server can be defined in a comma seperated list.
+# More than one server can be defined in a comma separated list.
 #defaultsmtpservers=smtp.myisp.com
 #defaultsmtpservers=smtp.myisp.com:587/mailuser:mailpass
 
@@ -87,6 +87,6 @@ relay.ipaddresses=127.0.0.1
 # may send email from those addresses, including SPAMers.  This should
 # be used with caution.
 # Multiple email addresses can be specified as a comma separated list.
-# Email addresses are case insensitives.
+# Email addresses are case insensitive.
 # You can specify a blank username (@domain) to allow a whole domain.
 #relay.emailaddresses=me@mydomain.com,@myotherdomain.com
