--- a/nuxeo-runtime-remoting/pom.xml
+++ b/nuxeo-runtime-remoting/pom.xml
@@ -6,7 +6,7 @@
   <parent>
     <groupId>org.nuxeo.runtime</groupId>
     <artifactId>nuxeo-runtime-parent</artifactId>
-    <version>5.4.2.1-SNAPSHOT</version>
+    <version>5.4.2-HF05</version>
   </parent>
 
   <groupId>org.nuxeo.runtime</groupId>
