--- a/nuxeo-platform-commandline-executor/pom.xml
+++ b/nuxeo-platform-commandline-executor/pom.xml
@@ -21,6 +21,10 @@
       <groupId>org.nuxeo.runtime</groupId>
       <artifactId>nuxeo-runtime</artifactId>
     </dependency>
+    <dependency>
+      <groupId>org.nuxeo.runtime</groupId>
+      <artifactId>nuxeo-launcher-commons</artifactId>
+    </dependency>
   </dependencies>
 
 </project>
