--- a/nuxeo-generic-wss-handler/pom.xml
+++ b/nuxeo-generic-wss-handler/pom.xml
@@ -6,7 +6,7 @@
   <parent>
     <groupId>org.nuxeo.ecm.platform</groupId>
     <artifactId>nuxeo-filesystem-connectors</artifactId>
-    <version>5.4.2.1-SNAPSHOT</version>
+    <version>5.4.2-HF06</version>
   </parent>
 
   <artifactId>nuxeo-generic-wss-handler</artifactId>
