NXP-7271: Add slashes before jboss server data dir to prevent adding relation path before it

--- a/nuxeo-distribution-jboss/pack/default.properties
+++ b/nuxeo-distribution-jboss/pack/default.properties
@@ -16,11 +16,11 @@ ORIG_NX_STRUCTURE=/templates/common/META-INF/nuxeo-structure-zip.xml
 nuxeo.config.dir=${nuxeo.ear.dir}/config
 
 # The location of the Nuxeo home on the production server.
-nuxeo.home.dir=${jboss.server.data.dir}/NXRuntime
+nuxeo.home.dir=/${jboss.server.data.dir}/NXRuntime
 
 #=================== nuxeo.conf properties ========================
 
-nuxeo.data.dir=${jboss.server.data.dir}/NXRuntime/data
+nuxeo.data.dir=/${jboss.server.data.dir}/NXRuntime/data
 
 org.nuxeo.ecm.contextPath=/nuxeo
 
