--- a/nuxeo-core/pom.xml
+++ b/nuxeo-core/pom.xml
@@ -6,9 +6,10 @@
   <parent>
     <groupId>org.nuxeo.ecm.core</groupId>
     <artifactId>nuxeo-core-parent</artifactId>
-    <version>5.4.1.1-NXP-7170-SNAPSHOT</version>
+    <version>5.4.1-HF09</version>
   </parent>
 
+  <version>5.4.1-HF09-7170-7356</version>
   <artifactId>nuxeo-core</artifactId>
   <name>Nuxeo Core</name>
   <description>Nuxeo Core: The Core.</description>
