--- a/nuxeo-platform-login-default/pom.xml
+++ b/nuxeo-platform-login-default/pom.xml
@@ -5,7 +5,7 @@
   <parent>
     <groupId>org.nuxeo.ecm.platform</groupId>
     <artifactId>nuxeo-services-parent</artifactId>
-    <version>5.4.1.1-NXP-7170-SNAPSHOT</version>
+    <version>5.4.1-HF09</version>
   </parent>
 
   <artifactId>nuxeo-platform-login-default</artifactId>
