--- a/nuxeo-platform-scheduler-core/pom.xml
+++ b/nuxeo-platform-scheduler-core/pom.xml
@@ -5,9 +5,10 @@
   <parent>
     <groupId>org.nuxeo.ecm.platform</groupId>
     <artifactId>nuxeo-services-parent</artifactId>
-    <version>5.4.1.1-NXP-7170-SNAPSHOT</version>
+    <version>5.4.1-HF09</version>
   </parent>
 
+  <version>5.4.1-HF09-7170-7356</version>
   <artifactId>nuxeo-platform-scheduler-core</artifactId>
   <name>Nuxeo Scheduler - Core</name>
   <description>Nuxeo Enterprise Platform: Nuxeo Scheduler is used to fire
