--- a/nuxeo-platform-webapp-core/pom.xml
+++ b/nuxeo-platform-webapp-core/pom.xml
@@ -10,7 +10,7 @@
   </parent>
 
   <artifactId>nuxeo-platform-webapp-core</artifactId>
-  <name>Nuxeo WebApp - Base</name>
+  <name>Nuxeo WebApp - Core</name>
   <description>
     Nuxeo Enterprise Platform: WebApp Core. This is the base of the Web UI for
     Nuxeo EP.
