--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
   <parent>
     <groupId>org.nuxeo.ecm.platform</groupId>
     <artifactId>nuxeo-features-parent</artifactId>
-    <version>5.4.2.1-SNAPSHOT</version>
+    <version>5.4.2-HF07</version>
   </parent>
 
   <groupId>org.nuxeo.ecm.distribution</groupId>
@@ -17,10 +17,10 @@
   <description>Build package distributions of nuxeo applications</description>
 
   <properties>
-    <nuxeo.dm.version>5.4.2.1-SNAPSHOT</nuxeo.dm.version>
-    <nuxeo.opencmis.version>5.4.2.1-SNAPSHOT</nuxeo.opencmis.version>
-    <nuxeo.distribution.version>5.4.2.1-SNAPSHOT</nuxeo.distribution.version>
-    <nuxeo.addons.version>5.4.2.1-SNAPSHOT</nuxeo.addons.version>
+    <nuxeo.dm.version>5.4.2-HF07</nuxeo.dm.version>
+    <nuxeo.opencmis.version>5.4.2-HF07</nuxeo.opencmis.version>
+    <nuxeo.distribution.version>5.4.2-HF07</nuxeo.distribution.version>
+    <nuxeo.addons.version>5.4.2-HF07</nuxeo.addons.version>
   </properties>
 
   <modules>
