--- a/nuxeo-admin-center/nuxeo-admin-center/pom.xml
+++ b/nuxeo-admin-center/nuxeo-admin-center/pom.xml
@@ -66,6 +66,10 @@
       <groupId>org.nuxeo.ecm.platform</groupId>
       <artifactId>nuxeo-platform-web-common</artifactId>
     </dependency>
+    <dependency>
+      <groupId>org.nuxeo.ecm.platform</groupId>
+      <artifactId>nuxeo-connect-update</artifactId>
+    </dependency>
 
     <dependency>
       <groupId>org.jboss.seam</groupId>
