--- a/pom.xml
+++ b/pom.xml
@@ -5,19 +5,19 @@
   <parent>
     <groupId>org.nuxeo</groupId>
     <artifactId>nuxeo-ecm</artifactId>
-    <version>5.4.3-SNAPSHOT</version>
+    <version>5.4.3-I20110829_0115</version>
   </parent>
 
   <groupId>org.nuxeo.runtime</groupId>
   <artifactId>nuxeo-runtime-parent</artifactId>
   <name>Nuxeo Runtime Parent</name>
-  <version>5.4.3-SNAPSHOT</version>
+  <version>5.4.3-I20110829_0115</version>
   <packaging>pom</packaging>
   <description>Nuxeo Runtime: Parent.</description>
 
   <properties>
-    <nuxeo.common.version>5.4.3-SNAPSHOT</nuxeo.common.version>
-    <nuxeo.runtime.version>5.4.3-SNAPSHOT</nuxeo.runtime.version>
+    <nuxeo.common.version>5.4.3-I20110829_0115</nuxeo.common.version>
+    <nuxeo.runtime.version>5.4.3-I20110829_0115</nuxeo.runtime.version>
   </properties>
 
   <modules>
