--- a/nuxeo-platform-webapp-types/pom.xml
+++ b/nuxeo-platform-webapp-types/pom.xml
@@ -5,7 +5,7 @@
   <parent>
     <artifactId>nuxeo-dm-parent</artifactId>
     <groupId>org.nuxeo.ecm.platform</groupId>
-    <version>5.4.3-SNAPSHOT</version>
+    <version>5.4.3-I20110829_0115</version>
   </parent>
 
   <artifactId>nuxeo-platform-webapp-types</artifactId>
