--- a/nuxeo-distribution-resources/src/main/resources/templates-common/common/config/nuxeo.properties
+++ b/nuxeo-distribution-resources/src/main/resources/templates-common/common/config/nuxeo.properties
@@ -1,6 +1,6 @@
 # application instance config
 org.nuxeo.ecm.instance.host=localhost
-org.nuxeo.ecm.product.version=5.4.3-SNAPSHOT
+org.nuxeo.ecm.product.version=5.4.3-I20110829_0115
 
 # runtime remoting config
 org.nuxeo.runtime.server.locator=socket://${nuxeo.bind.address}:62474/?datatype=nuxeo
