--- a/nuxeo-platform-document-routing-distribution/pom.xml
+++ b/nuxeo-platform-document-routing-distribution/pom.xml
@@ -7,7 +7,7 @@
   <parent>
     <groupId>org.nuxeo.ecm.platform</groupId>
     <artifactId>nuxeo-platform-document-routing</artifactId>
-    <version>5.4.3-SNAPSHOT</version>
+    <version>5.4.3-I20110902_0115</version>
   </parent>
 
   <artifactId>nuxeo-platform-document-routing-distribution</artifactId>
