DAM-612: working on 5.4.2 alignment

--- a/build.xml
+++ b/build.xml
@@ -49,12 +49,7 @@
   <target name="build" depends="build-unix,build-windows" />
   <target name="build-unix" if="osfamily-unix">
     <exec executable="mvn" failonerror="true">
-      <arg value="clean" />
-      <arg value="install" />
-      <arg value="-Dmaven.test.skip=true" />
-      <arg value="-P" />
-      <arg value="${mvn.profiles}" />
-      <arg value="${mvn.opts}" />
+      <arg line="clean install -Dmaven.test.skip=true -P${mvn.profiles} ${mvn.opts}" />
     </exec>
   </target>
   <target name="build-windows" if="osfamily-windows">
@@ -73,11 +68,7 @@
   <target name="build-with-tests" depends="build-with-tests-unix,build-with-tests-windows" />
   <target name="build-with-tests-unix" if="osfamily-unix">
     <exec executable="mvn" failonerror="true">
-      <arg value="clean" />
-      <arg value="install" />
-      <arg value="-P" />
-      <arg value="${mvn.profiles}" />
-      <arg value="${mvn.opts}" />
+      <arg line="clean install -P${mvn.profiles} ${mvn.opts}" />
     </exec>
   </target>
   <target name="build-with-tests-windows" if="osfamily-windows">
