--- a/nuxeo-dam-distribution/pom.xml
+++ b/nuxeo-dam-distribution/pom.xml
@@ -15,8 +15,7 @@
   <description>Build package distributions of Nuxeo DAM applications</description>
 
   <properties>
-    <nuxeo.distribution.version>5.4.1</nuxeo.distribution.version>
-    <nuxeo.platform.categorization.version>5.4.0.1</nuxeo.platform.categorization.version>
+    <nuxeo.distribution.version>5.4.2-HF07</nuxeo.distribution.version>
   </properties>
 
   <profiles>
@@ -98,22 +97,18 @@
     <dependency>
       <groupId>org.nuxeo.ecm.platform</groupId>
       <artifactId>nuxeo-platform-categorization-service</artifactId>
-      <version>${nuxeo.platform.categorization.version}</version>
     </dependency>
     <dependency>
       <groupId>org.nuxeo.ecm.platform</groupId>
       <artifactId>nuxeo-platform-categorization-language</artifactId>
-      <version>${nuxeo.platform.categorization.version}</version>
     </dependency>
     <dependency>
       <groupId>org.nuxeo.ecm.platform</groupId>
       <artifactId>nuxeo-platform-categorization-coverage</artifactId>
-      <version>${nuxeo.platform.categorization.version}</version>
     </dependency>
     <dependency>
       <groupId>org.nuxeo.ecm.platform</groupId>
       <artifactId>nuxeo-platform-categorization-subjects</artifactId>
-      <version>${nuxeo.platform.categorization.version}</version>
     </dependency>
     <dependency>
       <groupId>org.nuxeo.ecm.platform</groupId>
