--- a/nuxeo-platform-notification/nuxeo-platform-notification-core/pom.xml
+++ b/nuxeo-platform-notification/nuxeo-platform-notification-core/pom.xml
@@ -46,6 +46,10 @@
       <artifactId>nuxeo-platform-url-api</artifactId>
     </dependency>
     <dependency>
+      <groupId>org.nuxeo.ecm.platform</groupId>
+      <artifactId>nuxeo-platform-comment-api</artifactId>
+    </dependency>
+    <dependency>
       <groupId>org.freemarker</groupId>
       <artifactId>freemarker</artifactId>
     </dependency>
