--- a/nuxeo-platform-comment/nuxeo-platform-comment/pom.xml
+++ b/nuxeo-platform-comment/nuxeo-platform-comment/pom.xml
@@ -18,6 +18,10 @@
       <artifactId>nuxeo-platform-comment-api</artifactId>
     </dependency>
     <dependency>
+      <groupId>org.nuxeo.ecm.platform</groupId>
+      <artifactId>nuxeo-platform-notification-core</artifactId>
+    </dependency>
+    <dependency>
       <groupId>org.nuxeo.ecm.core</groupId>
       <artifactId>nuxeo-core-api</artifactId>
     </dependency>
