--- a/nuxeo-platform-importer-core/pom.xml
+++ b/nuxeo-platform-importer-core/pom.xml
@@ -4,12 +4,13 @@
   <parent>
     <groupId>org.nuxeo.ecm.platform</groupId>
     <artifactId>nuxeo-platform-importer</artifactId>
-    <version>5.4.3-SNAPSHOT</version>
+    <version>5.4.3-I20110908_0115</version>
   </parent>
   <modelVersion>4.0.0</modelVersion>
   <groupId>org.nuxeo.ecm.platform</groupId>
   <artifactId>nuxeo-platform-importer-core</artifactId>
   <name>Nuxeo Importer Core</name>
+  <version>5.4.3-I20110908_0115</version>
 
   <dependencies>
     <dependency>
