--- a/pom.xml
+++ b/pom.xml
@@ -4,25 +4,30 @@
   <parent>
     <groupId>org.nuxeo.ecm.platform</groupId>
     <artifactId>nuxeo-features-parent</artifactId>
-    <version>5.4.3-SNAPSHOT</version>
+    <version>5.4.3-I20110829_0115</version>
   </parent>
   <modelVersion>4.0.0</modelVersion>
   <groupId>org.nuxeo.ecm.platform</groupId>
   <artifactId>nuxeo-platform-importer</artifactId>
   <packaging>pom</packaging>
   <name>Nuxeo Importer parent</name>
+  <version>5.4.3-I20110908_0115</version>
 
   <modules>
     <module>nuxeo-platform-importer-core</module>
     <module>nuxeo-platform-importer-jaxrs</module>
   </modules>
 
+<properties>
+     <nuxeo.platform.importer.version>5.4.3-I20110908_0115</nuxeo.platform.importer.version>
+</properties>
+
   <dependencyManagement>
     <dependencies>
       <dependency>
         <groupId>org.nuxeo.ecm.platform</groupId>
         <artifactId>nuxeo-platform-importer-core</artifactId>
-        <version>${nuxeo.features.version}</version>
+        <version>${nuxeo.platform.importer.version}</version>
       </dependency>
       <dependency>
         <groupId>org.nuxeo.ecm.core</groupId>
