DAM-617: Update theme

--- a/nuxeo-dam-webapp-core/src/main/resources/themes/palettes/dam-backgrounds.properties
+++ b/nuxeo-dam-webapp-core/src/main/resources/themes/palettes/dam-backgrounds.properties
@@ -6,13 +6,19 @@ white=#ffffff
 scrollbar=#d0d1d8
 scroll=#f2f2f2
 rightclic=#4d4d4d
-buttons=#cecfd1 url(/nuxeo/img/buttons.png) top left repeat-x
-banner=#4d4d4d url(/nuxeo/img/banner_bground.png) top left repeat-x
-footer=#4d4d4d url(/nuxeo/img/banner_bground.png) bottom left repeat-x
-filterstitle=#c1c1c1 url(/nuxeo/img/filter_title_bg.png) top left repeat-x
-tableheader=#e8e8e9 url(/nuxeo/img/table_header.png) top left repeat-x
-searchInput=#ffffff url(/nuxeo/icons/search.gif) no-repeat scroll 2px 2px
-tabs=#c9cacd url(/nuxeo/img/tabs_bg.gif) repeat-x top left
+buttons=#cecfd1 url(${org.nuxeo.ecm.contextPath}/img/buttons.png) top left repeat-x
+topbar=#101b3f
+footer=#101b3f
+filterstitle=#c1c1c1 url(${org.nuxeo.ecm.contextPath}/img/filter_title_bg.png) top left repeat-x
+tableheader=#e8e8e9 url(${org.nuxeo.ecm.contextPath}/img/table_header.png) top left repeat-x
+searchInput=#ffffff url(${org.nuxeo.ecm.contextPath}/icons/search.gif) no-repeat scroll 2px 2px
+tabs=#c9cacd url(${org.nuxeo.ecm.contextPath}/img/tabs_bg.gif) repeat-x top left
 tabselected=#fff
 tabnotselected=#b5bcc6
-external=url(/nuxeo/icons/external.gif) no-repeat scroll right center transparent
+external=url(${org.nuxeo.ecm.contextPath}/icons/external.gif) no-repeat scroll right center transparent
+header.userMenu=url(${org.nuxeo.ecm.contextPath}/icons/user.png) no-repeat scroll 3px center transparent
+header.userListLinkHover=#ccf1ff
+header.mainTabs=#207594
+header.mainTabsSelected=#ffffff
+footer.twittLink=transparent url(${org.nuxeo.ecm.contextPath}/icons/icones-metanav.png) no-repeat left top
+footer.linkedInLink=transparent url(${org.nuxeo.ecm.contextPath}/icons/icones-metanav.png) no-repeat -16px top
