--- a/nuxeo-dam-webapp-core/src/main/resources/themes/palettes/dam-borders.properties
+++ b/nuxeo-dam-webapp-core/src/main/resources/themes/palettes/dam-borders.properties
@@ -1,3 +1,5 @@
+topbar=1px solid #ffffff
+footer=1px solid #292929
 graydark=1px solid #4d4d4d
 grayneutral=1px solid #999999
 graymedium=1px solid #b5bcc6
