--- a/nuxeo-dam-webapp-core/src/main/resources/themes/palettes/dam-colors.properties
+++ b/nuxeo-dam-webapp-core/src/main/resources/themes/palettes/dam-colors.properties
@@ -1,6 +1,14 @@
+header.text=#cecece
+header.link=#ffffff
+header.userMenu=#7693a3
+header.userMenuHover=#000000
+header.mainTabs=#d7e3f1
+header.mainTabsHover=#ffffff
+header.mainTabsSelected=#000000
 blue.gray=#4b4d68
 black=#000000
 blackfonts=#333333
 gray.medium=#727272
 gray.light=#dbd6d5
 white=#ffffff
+footer.text=#9a9a9a
