--- a/nuxeo-dam-webapp-core/src/main/resources/themes/palettes/dam-fonts.properties
+++ b/nuxeo-dam-webapp-core/src/main/resources/themes/palettes/dam-fonts.properties
@@ -1,4 +1,5 @@
 default=11px 'Lucida Grande', Verdana, Arial, sans-serif
+big.default=bold 11px 'Lucida Grande', Verdana, Arial, sans-serif
 small=10px 'Lucida Grande', Verdana, Arial, sans-serif
 tiny=9px 'Lucida Grande', Verdana, Arial, sans-serif
 
