NXP-7510: allow deployment as a pure WAR through when NuxeoStarter is set up as ServletContextListener

--- a/nuxeo-runtime-deploy/pom.xml
+++ b/nuxeo-runtime-deploy/pom.xml
@@ -23,6 +23,10 @@
       <groupId>org.nuxeo.runtime</groupId>
       <artifactId>nuxeo-launcher-commons</artifactId>
     </dependency>
+    <dependency>
+      <groupId>org.nuxeo.runtime</groupId>
+      <artifactId>nuxeo-runtime-osgi</artifactId>
+    </dependency>
 
     <dependency>
       <groupId>javax.servlet</groupId>
