--- a/nuxeo-dam-distribution/pom.xml
+++ b/nuxeo-dam-distribution/pom.xml
@@ -5,7 +5,7 @@
   <parent>
     <groupId>org.nuxeo.dam</groupId>
     <artifactId>nuxeo-dam-parent</artifactId>
-    <version>1.4-SNAPSHOT</version>
+    <version>5.4.3-SNAPSHOT</version>
   </parent>
 
   <groupId>org.nuxeo.dam.distribution</groupId>
@@ -15,7 +15,7 @@
   <description>Build package distributions of Nuxeo DAM applications</description>
 
   <properties>
-    <nuxeo.distribution.version>5.4.2-HF07</nuxeo.distribution.version>
+    <nuxeo.distribution.version>5.4.3-SNAPSHOT</nuxeo.distribution.version>
   </properties>
 
   <profiles>
