NXP-7538: make SQL Directory tests use the VCS test framework

--- a/nuxeo-platform-directory/nuxeo-platform-directory-sql/pom.xml
+++ b/nuxeo-platform-directory/nuxeo-platform-directory-sql/pom.xml
@@ -75,6 +75,12 @@
     </dependency>
 
     <dependency>
+      <groupId>com.h2database</groupId>
+      <artifactId>h2</artifactId>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <!-- dependency kept for other dependent modules -->
       <groupId>hsqldb</groupId>
       <artifactId>hsqldb</artifactId>
       <scope>test</scope>
