--- a/pom.xml
+++ b/pom.xml
@@ -1724,6 +1724,7 @@
         <artifactId>gwtext</artifactId>
         <version>2.0.5</version>
       </dependency>
+      <!-- DEPRECATED: use 2.6.0 standalone instead; kept until tests are updated -->
       <dependency>
         <groupId>org.seleniumhq.selenium</groupId>
         <artifactId>selenium-api</artifactId>
@@ -1768,11 +1769,17 @@
           </exclusion>
         </exclusions>
       </dependency>
+      <!-- DEPRECATED: use 2.6.0 instead; kept until tests are updated -->
       <dependency>
         <groupId>org.seleniumhq.selenium</groupId>
         <artifactId>selenium-server</artifactId>
         <version>2.0b3</version>
         <classifier>standalone</classifier>
+      </dependency>
+      <dependency>
+        <groupId>org.seleniumhq.selenium</groupId>
+        <artifactId>selenium-server-standalone</artifactId>
+        <version>2.6.0</version>
       </dependency>
       <dependency>
         <groupId>net.oauth.core</groupId>
