NXP-7552: Align on tools-nuxeo-ftest 1.6

--- a/nuxeo-distribution-tomcat-tests/pom.xml
+++ b/nuxeo-distribution-tomcat-tests/pom.xml
@@ -107,12 +107,33 @@
             </goals>
             <configuration>
               <buildFile>${basedir}/itests.xml</buildFile>
-              <target>stop</target>
+              <targets>
+                <target>stop</target>
+                <target>cleanup-environment</target>
+              </targets>
             </configuration>
           </execution>
         </executions>
       </plugin>
     </plugins>
   </build>
+
+  <profiles>
+    <profile>
+      <id>pgsql</id>
+    </profile>
+    <profile>
+      <id>mssql</id>
+    </profile>
+    <profile>
+      <id>oracle10g</id>
+    </profile>
+    <profile>
+      <id>oracle11g</id>
+    </profile>
+    <profile>
+      <id>mysql</id>
+    </profile>
+  </profiles>
 
 </project>
