--- a/nuxeo-platform-directory/nuxeo-platform-directory-types-contrib/pom.xml
+++ b/nuxeo-platform-directory/nuxeo-platform-directory-types-contrib/pom.xml
@@ -5,7 +5,7 @@
   <parent>
     <groupId>org.nuxeo.ecm.platform</groupId>
     <artifactId>nuxeo-platform-directory-parent</artifactId>
-    <version>5.4.1.1-SNAPSHOT</version>
+    <version>5.4.1-HF11</version>
   </parent>
 
   <artifactId>nuxeo-platform-directory-types-contrib</artifactId>
