--- a/nuxeo-platform-directory/pom.xml
+++ b/nuxeo-platform-directory/pom.xml
@@ -5,7 +5,7 @@
   <parent>
     <artifactId>nuxeo-services-parent</artifactId>
     <groupId>org.nuxeo.ecm.platform</groupId>
-    <version>5.4.1.1-SNAPSHOT</version>
+    <version>5.4.1-HF11</version>
   </parent>
 
   <groupId>org.nuxeo.ecm.platform</groupId>
