--- a/nuxeo-distribution-server/pom.xml
+++ b/nuxeo-distribution-server/pom.xml
@@ -5,7 +5,7 @@
   <parent>
     <groupId>org.nuxeo.ecm.platform</groupId>
     <artifactId>nuxeo-features-parent</artifactId>
-    <version>5.4.1.1-SNAPSHOT</version>
+    <version>5.4.1-HF11</version>
   </parent>
 
   <groupId>org.nuxeo.ecm.distribution</groupId>
