--- a/pom.xml
+++ b/pom.xml
@@ -11,13 +11,14 @@
   <name>Nuxeo Platform Video parent</name>
   <packaging>pom</packaging>
   <description>Nuxeo Platform Video provides video managment
-               to Nuxeo Web Platform and RCP. 
+               to Nuxeo Web Platform and RCP.
   </description>
 
   <modules>
     <module>nuxeo-platform-video-core</module>
     <module>nuxeo-platform-video-convert</module>
     <module>nuxeo-platform-video-jsf</module>
+    <module>nuxeo-platform-video-streaming</module>
   </modules>
 
   <dependencyManagement>
