NXP-7534: Use lower case prefix for quartz table, preventing Invalid object error.

--- a/nuxeo-distribution-resources/src/main/resources/templates-tomcat/mssql-quartz-cluster/nxserver/config/quartz.properties
+++ b/nuxeo-distribution-resources/src/main/resources/templates-tomcat/mssql-quartz-cluster/nxserver/config/quartz.properties
@@ -3,7 +3,7 @@ org.quartz.jobStore.driverDelegateClass = org.quartz.impl.jdbcjobstore.MSSQLDele
 org.quartz.jobStore.dataSource = nxquartz
 org.quartz.jobStore.nonManagedTXDataSource = nxquartz_no_tx
 org.quartz.jobStore.dontSetAutoCommitFalse = true
-org.quartz.jobStore.tablePrefix = qrtz_
+org.quartz.jobStore.tablePrefix = QRTZ_
 org.quartz.jobStore.isClustered = true
 
 org.quartz.scheduler.instanceName = MSSQLClusteredScheduler
