--- a/nuxeo-distribution-shell/pom.xml
+++ b/nuxeo-distribution-shell/pom.xml
@@ -5,7 +5,7 @@
   <parent>
     <groupId>org.nuxeo.ecm.distribution</groupId>
     <artifactId>nuxeo-distribution</artifactId>
-    <version>5.4.2-I20110404_0115</version>
+    <version>5.4.2-I20110404_0115.1-SNAPSHOT</version>
   </parent>
 
   <artifactId>nuxeo-distribution-shell</artifactId>
