NXP-7592: Use Audio ecm type from nuxeo-platform-audio

--- a/pom.xml
+++ b/pom.xml
@@ -118,6 +118,11 @@
       </dependency>
       <dependency>
         <groupId>org.nuxeo.ecm.platform</groupId>
+        <artifactId>nuxeo-platform-audio-jsf</artifactId>
+        <version>${nuxeo.features.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>org.nuxeo.ecm.platform</groupId>
         <artifactId>nuxeo-platform-categorization-service</artifactId>
         <version>${nuxeo.features.version}</version>
       </dependency>
