--- a/nuxeo-platform-video-convert/pom.xml
+++ b/nuxeo-platform-video-convert/pom.xml
@@ -26,6 +26,10 @@
       <artifactId>nuxeo-platform-commandline-executor</artifactId>
     </dependency>
     <dependency>
+      <groupId>org.nuxeo.ecm.platform</groupId>
+      <artifactId>nuxeo-platform-convert</artifactId>
+    </dependency>
+    <dependency>
       <groupId>commons-io</groupId>
       <artifactId>commons-io</artifactId>
     </dependency>
