NXP-7625 - Create dedicated Tomcat distributions for SDK support

--- a/nuxeo-distribution-tomcat/pom.xml
+++ b/nuxeo-distribution-tomcat/pom.xml
@@ -53,6 +53,11 @@
       <id>nuxeo-dm</id>
       <!-- default profile for building Tomcat with only Nuxeo DM -->
     </profile>
+    <!-- <profile> -->
+    <!-- <id>sdk</id> -->
+    <!-- profile for building SDK distributions (which are always built when release
+      profile is activated) -->
+    <!-- </profile> -->
   </profiles>
 
   <build>
