NXP-7522: isolate theme styling in a new module (work in progress)

--- a/pom.xml
+++ b/pom.xml
@@ -27,6 +27,7 @@
     <module>nuxeo-theme-core</module>
     <module>nuxeo-theme-fragments</module>
     <module>nuxeo-theme-html</module>
+    <module>nuxeo-theme-styling</module>
   </modules>
 
   <organization>
