NXP-7522: follow changes to the admin center theme + add negotiation for default flavour

--- a/pom.xml
+++ b/pom.xml
@@ -601,6 +601,11 @@
       </dependency>
       <dependency>
         <groupId>org.nuxeo.theme</groupId>
+        <artifactId>nuxeo-theme-styling</artifactId>
+        <version>${nuxeo.theme.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>org.nuxeo.theme</groupId>
         <artifactId>nuxeo-theme-fragments</artifactId>
         <version>${nuxeo.theme.version}</version>
       </dependency>
