--- a/nuxeo-platform-localconfiguration/nuxeo-platform-localconfiguration-web/pom.xml
+++ b/nuxeo-platform-localconfiguration/nuxeo-platform-localconfiguration-web/pom.xml
@@ -29,6 +29,10 @@
       <groupId>org.nuxeo.theme</groupId>
       <artifactId>nuxeo-theme-core</artifactId>
     </dependency>
+    <dependency>
+      <groupId>org.nuxeo.theme</groupId>
+      <artifactId>nuxeo-theme-styling</artifactId>
+    </dependency>
 
     <dependency>
       <groupId>org.jboss.seam</groupId>
